# gol-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-wasm.sh
src/: GameOfLife.cpp  GameOfLifeBoard.cpp  GameOfLifeBoard.hpp  main.cpp
web/: index.html
